[package]
name = "reverse-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1"
awc = { version = "3", features = ["rustls"] }
clap = { version = "3", features = ["derive"] }
env_logger = "0.9"
futures-util = "0.3"
log = "0.4"
